[package]
name = "zing"
version = "0.1.0"
description = " A TUI for physical string art placement. It takes a sequence, you pull the thread. ZING: Zing Is Not Generating."
authors = ["Darío Martínez Kostyuk <dariomartk@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
