[package]
name = "zing-art"
version = "1.1.0"
repository = "https://github.com/000volk000/zing"
homepage = "https://github.com/000volk000/zing"
description = " A TUI for physical string art placement. It takes a sequence, you pull the thread. ZING: Zing Is Not Generating."
authors = ["Darío Martínez Kostyuk <dariomartk@gmail.com>"]
license = "MIT"
edition = "2024"

[[bin]]
name = "zing"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
tui-big-text = "0.8.1"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
